[package]
name = "ms_viewer"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bincode = "2.0.1"
const_format = "0.2.35"
eframe = { version = "0.33.2", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
] }
egui = "0.33.2"
egui-phosphor = "0.11.0"
egui_extras = "0.33.2"
egui_plot = "0.34.0"
egui_tiles = "0.14.0"
indexmap = "2.12.1"
itertools = "0.14.0"
polars = { version = "0.52.0", features = [
    "bitwise",
    "dtype-duration",
    "dtype-i16",
    "dtype-struct",
    "dtype-u16",
    "fmt_no_tty",
    "lazy",
    "list_eval",
    "peaks",
    "rolling_window",
    "round_series",
    "row_hash",
    "serde",
    "temporal",
    #
    "dtype-datetime",
    # "dtype-decimal",
    "timezones",
], default-features = false }
polars-utils = { version = "0.52.0", features = ["nightly"] }
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.43"
uom = { version = "0.37.0", features = ["serde"] }

egui_ext = { git = "https://github.com/kgv/egui_ext" }
metadata = { git = "https://github.com/ippras/metadata", features = [
    "egui",
    "polars",
] }
polars_ext = { git = "https://github.com/kgv/polars_ext" }

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.56"
web-sys = "0.3.83"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 2
