[package]
name = "ms_viewer"
version = "0.0.5"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
bincode = "1.3.3"
eframe = { version = "0.31.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
] }
egui = "0.31.0"
egui-phosphor = "0.9.0"
egui_ext = { git = "https://github.com/kgv/egui_ext" }
egui_extras = "0.31.0"
egui_plot = "0.31.0"
egui_tiles = "0.12.0"
itertools = "0.14.0"
metadata = { git = "https://github.com/ippras/metadata" }
polars = { version = "0.46.0", features = [
    "dtype-i16",
    "dtype-struct",
    "dtype-u16",
    "fmt_no_tty",
    "lazy",
    "list_eval",
    "rolling_window",
    "round_series",
    "serde",
], default-features = false }
polars-utils = { git = "https://github.com/pola-rs/polars", rev = "65848bc2ff4bda33809ed8be2517594df5b53d26", features = [
    "nightly",
] }
polars_ext = { git = "https://github.com/kgv/polars_ext" }
ron = "0.8.1"
serde = { version = "1.0.218", features = ["derive"] }
tracing = "0.1.41"
uom = { version = "0.36.0", features = ["serde"] }

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 2
